cabal-version:          3.0
name:                   isx-plugin-spellchecker
version:                0.0.0
synopsis:               Isoxya plugin: Spellchecker
license:                NONE
license-file:           LICENSE
author:                 tiredpixel
maintainer:             tiredpixel
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library common
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Aeson
        TPX.Com.API.Ext.URI
        TPX.Com.API.Req
        TPX.Com.API.Res
        TPX.Com.API.Resource.CommonError
        TPX.Com.API.Resource.ISX.Pick
        TPX.Com.API.Resource.ISX.PickSnap
    other-modules:
        TPX.Com.URL
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        http-conduit,
        network-uri,
        regex-compat,
        snap-core,
        snap-extras,
        text,
        unix,
        unordered-containers
    hs-source-dirs:
        lib/common/src

library isx-plugin-spellchecker-int
    import:             shared-properties
    exposed-modules:
        ISX.Plugin.Spellchecker.Checker
        ISX.Plugin.Spellchecker.Parser
        ISX.Plugin.Spellchecker.Route
        ISX.Plugin.Spellchecker.Zone.Common.Apex
        ISX.Plugin.Spellchecker.Zone.Common.Data
    other-modules:
        ISX.Plugin.Spellchecker.Resource.Common
        Paths_isx_plugin_spellchecker
    build-depends:
        common,
        --
        aeson,
        containers,
        hxt,
        process-extras,
        snap-core,
        snap-extras,
        text,
        time
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plugin-spellchecker
    import:             shared-properties
    main-is:            Main.hs
    build-depends:
        common,
        isx-plugin-spellchecker-int,
        --
        snap-server
    hs-source-dirs:
        src/ISX/Plugin/Spellchecker/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-test
    import:             shared-properties
    exposed-modules:
        TPX.Com.API.Test
    build-depends:
        common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        directory,
        filepath,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common/test

test-suite isx-plugin-spellchecker-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Plugin.Spellchecker.CheckerSpec
        ISX.Plugin.Spellchecker.ParserSpec
        ISX.Plugin.Spellchecker.Zone.Common.ApexSpec
        ISX.Plugin.Spellchecker.Zone.Common.DataSpec
        ISX.Test
    build-depends:
        isx-plugin-spellchecker-int,
        common,
        common-test,
        --
        aeson,
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        vector
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
